@@ -32,7 +32,7 @@ $rcube_languages = array(
   'az_AZ' => 'Azerbaijani (Azərbaycanca)',
   'eu_ES' => 'Basque (Euskara)',
   'bn_BD' => 'Bengali (বাংলা)',
-  'bs_BA' => 'Bosnian (Bošnjački)',
+  'bs_BA' => 'Bosnian (Bosanski)',
   'br'	  => 'Breton (Brezhoneg)',
   'bg_BG' => 'Bulgarian (Български)',
   'ca_ES' => 'Catalan (Català)',
